--- a/autorun_dev_20210322_1601_existence_ver.ipynb
+++ b/autorun_dev_20210322_1601_existence_ver.ipynb
@@ -92,32 +92,34 @@
     "    score = 0\n",
     "    if(ax == 'X'):\n",
     "        for i in range(len(data)):\n",
-    "            if(data[i]>=86 and data[i]<=89):\n",
+    "            if(data[i]>=69 and data[i]<=71):\n",
     "                score = score + 1\n",
-    "            elif(data[i]>=82 and data[i]<86):\n",
-    "                score = score + 0.65\n",
-    "            elif(data[i]>32 and data[i]<=37):\n",
-    "                score = score + 0.27\n",
+    "            elif((data[i]>=41 and data[i]<=42)or(data[i]==72)):\n",
+    "                score = score + 0.6\n",
+    "            elif(data[i]>=39 and data[i]<=40):\n",
+    "                score = score + 0.3\n",
     "            else:\n",
     "                score = score + 0.1\n",
     "    \n",
     "    if(ax == 'Y'):\n",
     "        for i in range(len(data)):\n",
-    "            if(data[i]>=69 and data[i]<=72):\n",
+    "            if(data[i]>=87 and data[i]<=88):\n",
     "                score = score + 1\n",
-    "            elif(data[i]>=39 and data[i]<43):\n",
-    "                score = score + 0.2\n",
+    "            elif(data[i]>=85 and data[i]<=86):\n",
+    "                score = score + 0.6\n",
+    "            elif(data[i]>=172 and data[i]<=174):\n",
+    "                score = score + 0.4\n",
     "            else:\n",
     "                score = score + 0.1\n",
     "    \n",
     "    if(ax == 'Z'):\n",
     "        for i in range(len(data)):\n",
-    "            if(data[i]>=35 and data[i]<=45):\n",
+    "            if(data[i]>=40 and data[i]<=43):\n",
     "                score = score + 1\n",
-    "            elif(data[i]>=30 and data[i]<35):\n",
-    "                score = score + 0.31\n",
-    "            elif(data[i]>45 and data[i]<=50):\n",
-    "                score = score + 0.31\n",
+    "            elif((data[i]>=38 and data[i]<=39)or(data[i]==44)):\n",
+    "                score = score + 0.6\n",
+    "            elif(data[i]>=35 and data[i]<=36):\n",
+    "                score = score + 0.25\n",
     "            else:\n",
     "                score = score + 0.1\n",
     "    \n",
@@ -131,11 +133,11 @@
     "    Y_determine = 0\n",
     "    Z_determine = 0\n",
     "    \n",
-    "    if(scoreX>(3.5*(len(dataX)/5))):\n",
+    "    if(scoreX>(3*(len(dataX)/5))):\n",
     "        X_determine = 1\n",
-    "    if(scoreY>(3*(len(dataY)/5))):\n",
+    "    if(scoreY>(3.25*(len(dataY)/5))):\n",
     "        Y_determine = 1\n",
-    "    if(scoreZ>(3.5*(len(dataZ)/5))):\n",
+    "    if(scoreZ>(3.25*(len(dataZ)/5))):\n",
     "        Z_determine = 1\n",
     "    \n",
     "    return (X_determine and Y_determine and Z_determine)\n",
