--- a/autorun_dev_20210322_1601_existence_ver.ipynb
+++ b/autorun_dev_20210322_1601_existence_ver.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,18 +92,16 @@
     "    score = 0\n",
     "    if(ax == 'X'):\n",
     "        for i in range(len(data)):\n",
-    "            if(data[i]>=69 and data[i]<=71):\n",
+    "            if(data[i]>=70 and data[i]<=73):\n",
     "                score = score + 1\n",
-    "            elif((data[i]>=41 and data[i]<=42)or(data[i]==72)):\n",
-    "                score = score + 0.6\n",
-    "            elif(data[i]>=39 and data[i]<=40):\n",
-    "                score = score + 0.3\n",
+    "            elif(data[i]>=33 and data[i]<=42):\n",
+    "                score = score + 0.67\n",
     "            else:\n",
     "                score = score + 0.1\n",
     "    \n",
     "    if(ax == 'Y'):\n",
     "        for i in range(len(data)):\n",
-    "            if(data[i]>=87 and data[i]<=88):\n",
+    "            if(data[i]>=78 and data[i]<=84):\n",
     "                score = score + 1\n",
     "            elif(data[i]>=85 and data[i]<=86):\n",
     "                score = score + 0.6\n",
@@ -167,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -223,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -234,8 +232,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -244,9 +244,6 @@
       "1580486412.0\n",
       "1580486716.0\n",
       "1580487020.0\n",
-      "1588261696.0\n",
-      "1588262000.0\n",
-      "1588262304.0\n",
       "frequency problem\n"
      ]
     }
